# sims

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  dds_to_png.py  extract_package.py  imgui.ini
.github/workflows/: ci.yml
assets/definitions/: interactions.json  objects.json
assets/models/: README.md  female_avatar_idle.fbx  female_avatar_run.fbx  female_avatar_sit.fbx  female_avatar_sleep.fbx  female_avatar_walk.fbx
assets/shaders/: flat.frag  flat.vert  lit.frag  lit.vert  lit_skin.vert
src/: main.cpp
src/app/: Application.cpp  Application.hpp
src/audio/: AudioSystem.cpp  AudioSystem.hpp
src/content/: InteractionLibrary.cpp  InteractionLibrary.hpp
src/ecs/: components.hpp  registry.hpp
src/render/: Animator.cpp  Animator.hpp  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SimAvatar.cpp  SimAvatar.hpp  Skeleton.cpp  Skeleton.hpp  SkinnedModel.cpp  SkinnedModel.hpp  Texture.cpp  Texture.hpp
src/sim/: ActionSystem.cpp  ActionSystem.hpp  AutonomySystem.cpp  AutonomySystem.hpp  MotiveSystem.cpp  MotiveSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  SaveLoad.cpp  SaveLoad.hpp
src/sim/motives/: Motives.cpp  Motives.hpp
src/sim/pathfinding/: Pathfinder.cpp  Pathfinder.hpp
src/sim/time/: SimClock.cpp  SimClock.hpp
src/sim/world/: Coord.hpp  TileGrid.hpp
src/ui/: PieMenu.cpp  PieMenu.hpp
tests/: CMakeLists.txt  test_action_queue.cpp  test_autonomy.cpp  test_motives.cpp  test_pathfinder.cpp  test_save_load.cpp  test_simclock.cpp
